<resources>
    <string name="app_name">CHAP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">نام کاربری</string>
    <string name="name_familyName">نام و نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="mobile">شماره موبایل</string>
    <string name="password">پسورد</string>
    <string name="text_signin">وارد شوید</string>
    <string name="signup">ثبت نام</string>
    <string name="signin">ورود</string>
    <string name="edit_info">ویرایش اطلاعات</string>
    <string name="change_pass">تغییر پسورد</string>
    <string name="addresses">آدرس ها</string>
    <string name="contact_us">تماس با ما</string>
    <string name="about_us">درباره ما</string>
    <string name="exit">خروج</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="our_address">آدرس: دانشگاه فردوسی مشهد</string>
    <string name="our_phone">شماره تلفن: ۰۹۱۵۹۸۸۰۵۴۹</string>
    <string name="our_email">ایمیل: mahdimn2011@yahoo.com</string>
    <string name="about_us_txt">این درباره ما است. این درباره ما است. این درباره ما است. این درباره ما است. این درباره ما است</string>
    <string name="cont">ادامه</string>
    <string name="title_activity_address">AddressActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="address_description">آدرس خود را به دقت بررسی کنید و در صورت نیاز ویرایش نمایید</string>
    <string name="save">ذخیره</string>
    <string name="invalid_email">ایمیل نامعتبر است</string>
    <string name="invalid_name_family">نام و نام خانوادگی را وارد نمایید</string>
    <string name="invalid_mobile">شماره موبایل نمیتواند خالی یا نامعتبر  باشد</string>
    <string name="invalid_pass">حداقل طول رمز باید ۶ باشد</string>
    <string name="invalid_username">نام کاربری نمی‌تواند خالی باشد</string>
    <string name="error">باید به اینترنت متصل شوید</string>
    <string name="new_pass">پسورد جدید</string>
    <string name="new_pass_repeat">تکرار پسورد جدید</string>
    <string name="notEqual_pass">پسورد نابرابر</string>
    <string name="print_service">خدمات چاپ دیجیتال</string>
    <string name="print_service_description">فایلی جهت چاپ دارید؟ فایل خود را آپلود کنید!</string>
    <string name="copy_service">خدمات کپی و تکثیر</string>
    <string name="copy_service_description">کتاب یا جزوه ای برای کپی کردن دارید؟ زمانی را مشخص کنید تا از شما تحویل بگیریم و کپی آن را تحویل دهیم</string>
    <string name="gift_service">خدمات کارت هدیه</string>
    <string name="gift_service_description">کارت هدیه و گیفت با طرح های مختلف یا طرح خودتان انتخاب کنید</string>
    <string name="promo_service">خدمات تبلیغاتی</string>
    <string name="promo_service_description">این خدمات به شما پیشنهاد می‌شود</string>
</resources>