<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <!--        <item-->
        <!--            android:id="@+id/nav_favourite"-->
        <!--            android:icon="@drawable/ic_favorite_border_black_24dp"-->
        <!--            android:title="@string/nav_favourite" />-->
        <item
            android:id="@+id/nav_edit_info"
            android:icon="@drawable/ic_user"
            android:title="@string/edit_info" />
        <item
            android:id="@+id/nav_addresses"
            android:icon="@drawable/ic_address"
            android:title="@string/addresses" />
        <!--        <item-->
        <!--            android:id="@+id/nav_web_log"-->
        <!--            android:icon="@drawable/ic_class_black_24dp"-->
        <!--            android:title="@string/nav_web_log" />-->
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_logout"
            android:title="@string/exit" />
    </group>


</menu>
