<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.fragment.EditFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/titlefont"
        android:text="@string/edit_info"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/guide_3"
        app:layout_constraintEnd_toEndOf="@id/guide_4"
        app:layout_constraintTop_toBottomOf="@id/guide_1"
        app:layout_constraintBottom_toTopOf="@id/guide_2" />


    <LinearLayout
        android:id="@+id/layout_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_3"
        app:layout_constraintEnd_toEndOf="@id/guide_4"
        app:layout_constraintTop_toTopOf="@id/guide_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_change_pass"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/username"
            android:backgroundTint="@color/light_blue" />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:backgroundTint="@color/light_blue" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="number"
            android:hint="@string/mobile"
            android:backgroundTint="@color/light_blue" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_change_pass"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:text="@string/change_pass"
        android:layout_marginBottom="36dp"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="@id/guide_3"
        app:layout_constraintEnd_toEndOf="@id/guide_4" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_background"
            android:text="@string/save"
            android:textColor="@color/black"
            android:gravity="center" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>