<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.fragment.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/darkGrey"
        app:layout_constraintStart_toStartOf="@id/guide_3"
        app:layout_constraintEnd_toEndOf="@id/guide_4"
        app:layout_constraintTop_toBottomOf="@id/guide_1"
        app:layout_constraintBottom_toTopOf="@id/guide_2" />


    <LinearLayout
        android:id="@+id/layout_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_3"
        app:layout_constraintEnd_toEndOf="@id/guide_4"
        app:layout_constraintTop_toTopOf="@id/guide_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/username"
            android:backgroundTint="@color/light_blue" />

        <EditText
            android:id="@+id/et_name_familyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/white"
            android:hint="@string/name_familyName"
            android:backgroundTint="@color/light_blue" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:backgroundTint="@color/light_blue" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="number"
            android:hint="@string/mobile"
            android:backgroundTint="@color/light_blue" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="right|center"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:backgroundTint="@color/light_blue" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:text="@string/signup"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toTopOf="@id/layout_signin"
        app:layout_constraintStart_toStartOf="@id/guide_3"
        app:layout_constraintEnd_toEndOf="@id/guide_4" />

    <LinearLayout
        android:id="@+id/layout_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@id/btn_register"
        app:layout_constraintRight_toRightOf="@id/btn_register"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="ثبت نام نکرده اید؟ " />

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/text_signin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>