<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".application.view.fragment.SignInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="12dp"
        android:layout_height="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_back"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey"
        app:layout_constraintLeft_toRightOf="@id/guide_3"
        app:layout_constraintRight_toLeftOf="@id/guide_4"
        app:layout_constraintTop_toBottomOf="@id/guide_1"
        app:layout_constraintBottom_toTopOf="@id/guide_2" />


    <LinearLayout
        android:id="@+id/layout_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guide_3"
        app:layout_constraintRight_toRightOf="@+id/guide_4"
        app:layout_constraintTop_toTopOf="@id/guide_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="ایمیل یا نام کاربری"
            android:backgroundTint="@color/colorAccent" />


        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="right|center"
            android:hint="@string/password"
            android:backgroundTint="@color/colorAccent" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:text="@string/signin"
        android:layout_marginBottom="4dp"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toTopOf="@id/tv_register"
        app:layout_constraintLeft_toLeftOf="@id/guide_3"
        app:layout_constraintRight_toRightOf="@id/guide_4" />


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@id/guide_3"
        app:layout_constraintRight_toLeftOf="@id/guide_4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="12sp"
        android:text="@string/signup" />

</androidx.constraintlayout.widget.ConstraintLayout>